Add missing --enable-preview